# utils_cc

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  algorithm.h  base_pool.h  buf_pool.cc  buf_pool.h  common.cc  common.h  console.h  file_wrapper.h  helper.h  helpers.h  license_checker.h  log.cc  log.h  looper.cc  looper.h  macro_utils.h  module.h  network_base.h  networks.h  signal_handle.cc  signal_handle.h  singleton_guard.cc  singleton_guard.h  singleton_proc_checker.h  statistic.cc  statistic.h  string_utils.cc  string_utils.h  supervisor.h  sysinfo.h  thread_wrapper.h  time_limit.h  timer.cc  timer.h
include/utils_c/: bitset.h  checksum.h  common.h  number.h
include/utils_cc/: algorithm.h  base_pool.h  buffer.h  common.h  console.h  file_wrapper.h  helpers.h  log.h  looper.h  macro_utils.h  module.h  network_base.h  networks.h  number.h  signal_handle.h  singleton_guard.h  string_utils.h  supervisor.h  thread_wrapper.h  time.h
include/utils_cpp/: algorithm.h  base_pool.h  buf_pool.h  buffer.h  common.h  console.h  file_wrapper.h  log.h  looper.h  macro_utils.h  module.h  network_base.h  networks.h  number.h  signal_handle.h  singleton_guard.h  string_utils.h  supervisor.h  thread_wrapper.h  time.h  timer.h
msg_loop/: msg_loop.h  msg_pump.h
posix/: eintr_wrapper.h  file_descriptor_shuffle.cc  file_descriptor_shuffle.h  global_descriptors.h  safe_strerror.cc  safe_strerror.h
source/: c_bitset.c  c_checksum.c  c_number.c  common.cc  log.cc  looper.cc  signal_handle.cc  singleton_guard.cc  string_utils.cc  time.cc
test/: CMakeLists.txt  base_pool.cc  buffer.cc  c_bitset.cc  c_checksum.cc  c_number.cc  main.cc  number.cc
